@@ -147,6 +147,7 @@ EXTRA_DIST += \
 tmac_TESTS = \
   tmac/tests/an-ext_MR-works.sh \
   tmac/tests/an-ext_MT-works.sh \
+  tmac/tests/an-ext_SY-and-YS-work.sh \
   tmac/tests/an-ext_UR-works.sh \
   tmac/tests/an_AT-and-UC-footer-saved-and-restored.sh \
   tmac/tests/an_CS-register-off.sh \
